--- a/package.json
+++ b/package.json
@@ -61,9 +61,11 @@
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-bottom-drawer": "^0.1.1",
+    "react-detect-offline": "^2.4.5",
     "react-dom": "^18.2.0",
     "react-gravatar": "^2.6.3",
     "react-html-parser": "^2.0.2",
+    "react-idle-timer": "^5.5.3",
     "react-redux": "^7.2.6",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.4.3",
