--- a/public/config.json
+++ b/public/config.json
@@ -1,6 +1,6 @@
 {
-  "markets":{
-    "BTCUSD":{
+  "markets": {
+    "BTCUSD": {
       "category": "Crypto",
       "tv_id": "BTCUSD",
       "pair": "BTC-USD",
@@ -8,9 +8,9 @@
       "token1": "BTC",
       "token2": "USD",
       "full_name": "Bitcoin",
-      "img": "https://cdn.buffer.finance/Buffer-Website-Data/main/Assets/btc.svg" 
+      "img": "https://cdn.buffer.finance/Buffer-Website-Data/main/Assets/btc.svg"
     },
-    "ETHUSD":{
+    "ETHUSD": {
       "category": "Crypto",
       "tv_id": "ETHUSD",
       "pair": "ETH-USD",
@@ -18,11 +18,9 @@
       "token1": "ETH",
       "token2": "USD",
       "full_name": "Ethereum",
-      "img": "https://cdn.buffer.finance/Buffer-Website-Data/main/Assets/btc.svg" 
+      "img": "https://cdn.buffer.finance/Buffer-Website-Data/main/Assets/btc.svg"
     },
     "EURUSD": {
-      "max_duration": "04:00",
-      "min_duration": "00:01",
       "category": "Forex",
       "tv_id": "EURUSD",
       "pair": "EUR-USD",
@@ -32,15 +30,155 @@
       "full_name": "Euro",
       "img": "https://cdn.buffer.finance/Buffer-Website-Data/main/Assets/euro.png"
     },
-    "GBPUSD":{
-      "category": "Crypto",
+    "GBPUSD": {
+      "category": "Forex",
       "tv_id": "GBPUSD",
       "pair": "GBP-USD",
-      "price_precision": 100,
+      "price_precision": 1000000,
       "token1": "GBP",
       "token2": "USD",
       "full_name": "Pound",
-      "img": "https://cdn.buffer.finance/Buffer-Website-Data/main/Assets/btc.svg" 
+      "img": "https://cdn.buffer.finance/Buffer-Media/main/GBP.png"
+    },
+    "SOLUSD": {
+      "category": "Crypto",
+      "tv_id": "SOLUSD",
+      "pair": "SOL-USD",
+      "price_precision": 100,
+      "token1": "SOL",
+      "token2": "USD",
+      "full_name": "Solana",
+      "img": "https://cdn.buffer.finance/Buffer-Website-Data/main/Assets/sol.svg"
+    },
+    "ETHBTC": {
+      "category": "Crypto",
+      "tv_id": "ETHBTC",
+      "pair": "ETH-BTC",
+      "price_precision": 1000000,
+      "token1": "ETH",
+      "token2": "BTC",
+      "full_name": "Ethereum",
+      "img": "https://cdn.buffer.finance/Buffer-Website-Data/main/Assets/eth.svg"
+    },
+    "LINKUSD": {
+      "category": "Crypto",
+      "tv_id": "LINKUSD",
+      "pair": "LINK-USD",
+      "price_precision": 100,
+      "token1": "LINK",
+      "token2": "USD",
+      "full_name": "Chainlink",
+      "img": "https://cdn.buffer.finance/Buffer-Website-Data/main/Assets/link.svg"
+    },
+    "XAUUSD": {
+      "category": "Commodity",
+      "tv_id": "XAUUSD",
+      "pair": "XAU-USD",
+      "price_precision": 100,
+      "token1": "XAU",
+      "token2": "USD",
+      "full_name": "Gold",
+      "img": "https://cdn.buffer.finance/Buffer-Website-Data/main/Assets/xau.svg"
+    },
+    "XAGUSD": {
+      "category": "Commodity",
+      "tv_id": "XAGUSD",
+      "pair": "XAG-USD",
+      "price_precision": 1000,
+      "token1": "XAG",
+      "token2": "USD",
+      "full_name": "Silver",
+      "img": "https://cdn.buffer.finance/Buffer-Website-Data/main/Assets/xag.svg"
+    },
+    "AUDUSD": {
+      "category": "Forex",
+      "tv_id": "AUDUSD",
+      "pair": "AUD-USD",
+      "price_precision": 1000000,
+      "token1": "AUD",
+      "token2": "USD",
+      "full_name": "Australian Dollar",
+      "img": "https://cdn.buffer.finance/Buffer-Website-Data/main/Assets/aud1.svg"
+    },
+    "USDJPY": {
+      "category": "Forex",
+      "tv_id": "USDJPY",
+      "pair": "USD-JPY",
+      "price_precision": 1000000,
+      "token1": "USD",
+      "token2": "JPY",
+      "full_name": "United States Dollar",
+      "img": "https://cdn.buffer.finance/Buffer-Website-Data/main/Assets/USDC.svg"
+    },
+    "EURGBP": {
+      "category": "Forex",
+      "tv_id": "EURGBP",
+      "pair": "EUR-GBP",
+      "price_precision": 1000000,
+      "token1": "EUR",
+      "token2": "GBP",
+      "full_name": "Euro",
+      "img": "https://cdn.buffer.finance/Buffer-Website-Data/main/Assets/eur.svg"
+    },
+    "EURJPY": {
+      "category": "Forex",
+      "tv_id": "EURJPY",
+      "pair": "EUR-JPY",
+      "price_precision": 1000000,
+      "token1": "EUR",
+      "token2": "JPY",
+      "full_name": "Euro",
+      "img": "https://cdn.buffer.finance/Buffer-Website-Data/main/Assets/eur.svg"
+    },
+    "GBPJPY": {
+      "category": "Forex",
+      "tv_id": "GBPJPY",
+      "pair": "GBP-JPY",
+      "price_precision": 1000000,
+      "token1": "GBP",
+      "token2": "JPY",
+      "full_name": "British Pound",
+      "img": "https://cdn.buffer.finance/Buffer-Website-Data/main/Assets/GBP.svg"
+    },
+    "NZDUSD": {
+      "category": "Forex",
+      "tv_id": "NZDUSD",
+      "pair": "NZD-USD",
+      "price_precision": 1000000,
+      "token1": "NZD",
+      "token2": "USD",
+      "full_name": "New Zealand Dollar",
+      "img": "https://cdn.buffer.finance/Buffer-Website-Data/main/Assets/nzd.svg"
+    },
+    "USDCHF": {
+      "category": "Forex",
+      "tv_id": "USDCHF",
+      "pair": "USD-CHF",
+      "price_precision": 1000000,
+      "token1": "USD",
+      "token2": "CHF",
+      "full_name": "United States Dollar",
+      "img": "https://cdn.buffer.finance/Buffer-Website-Data/main/Assets/USDC.svg"
+    },
+    "GBPCHF": {
+      "category": "Forex",
+      "tv_id": "GBPCHF",
+      "pair": "GBP-CHF",
+      "price_precision": 1000000,
+      "token1": "GBP",
+      "token2": "CHF",
+      "full_name": "British Pound",
+      "img": "https://cdn.buffer.finance/Buffer-Website-Data/main/Assets/GBP.svg"
+    },
+    "USDCAD": {
+      "category": "Forex",
+      "tv_id": "USDCAD",
+      "pair": "USD-CAD",
+      "price_precision": 1000000,
+      "token1": "USD",
+      "token2": "CAD",
+      "full_name": "United States Dollar",
+      "img": "https://cdn.buffer.finance/Buffer-Website-Data/main/Assets/USDC.svg"
     }
   },
   "421613": {
@@ -69,7 +207,7 @@
     "pairs": [
       {
         "max_duration": "04:00",
-"min_duration": "00:01",
+        "min_duration": "00:01",
         "max_utilization": 200,
         "category": "Crypto",
         "tv_id": "BTCUSD",
@@ -91,7 +229,7 @@
       },
       {
         "max_duration": "04:00",
-"min_duration": "00:01",
+        "min_duration": "00:01",
         "max_utilization": 200,
         "category": "Crypto",
         "tv_id": "ETHUSD",
@@ -113,7 +251,7 @@
       },
       {
         "max_duration": "04:00",
-"min_duration": "00:01",
+        "min_duration": "00:01",
         "max_utilization": 300,
         "category": "Forex",
         "tv_id": "EURUSD",
@@ -135,7 +273,7 @@
       },
       {
         "max_duration": "04:00",
-"min_duration": "00:01",
+        "min_duration": "00:01",
         "max_utilization": 300,
         "category": "Forex",
         "tv_id": "GBPUSD",
@@ -581,8 +719,7 @@
           }
         ]
       }
-    ]
-,
+    ],
     "graph": {
       "MAIN": "https://api.thegraph.com/subgraphs/name/bufferfinance/buffer-mainnet",
       "LITE": "https://api.thegraph.com/subgraphs/name/bufferfinance/mainnet-lite"
@@ -730,8 +867,8 @@
     "pairs": [
       {
         "max_duration": "04:00",
-        "min_duration":"00:05",
-        "max_utilization":200,
+        "min_duration": "00:05",
+        "max_utilization": 200,
         "category": "Crypto",
         "tv_id": "BTCUSD",
         "pair": "BTC-USD",
@@ -752,8 +889,8 @@
       },
       {
         "max_duration": "04:00",
-        "min_duration":"00:05",
-        "max_utilization":200,
+        "min_duration": "00:05",
+        "max_utilization": 200,
         "category": "Crypto",
         "tv_id": "ETHUSD",
         "pair": "ETH-USD",
@@ -774,8 +911,8 @@
       },
       {
         "max_duration": "04:00",
-        "min_duration":"00:05",
-        "max_utilization":150,
+        "min_duration": "00:05",
+        "max_utilization": 150,
         "category": "Crypto",
         "tv_id": "SOLUSD",
         "pair": "SOL-USD",
@@ -796,8 +933,8 @@
       },
       {
         "max_duration": "04:00",
-        "min_duration":"01:00",
-        "max_utilization":150,
+        "min_duration": "01:00",
+        "max_utilization": 150,
         "category": "Crypto",
         "tv_id": "ETHBTC",
         "pair": "ETH-BTC",
@@ -818,8 +955,8 @@
       },
       {
         "max_duration": "04:00",
-        "min_duration":"01:00",
-        "max_utilization":150,
+        "min_duration": "01:00",
+        "max_utilization": 150,
         "category": "Crypto",
         "tv_id": "LINKUSD",
         "pair": "LINK-USD",
@@ -840,8 +977,8 @@
       },
       {
         "max_duration": "04:00",
-        "min_duration":"00:05",
-        "max_utilization":300,
+        "min_duration": "00:05",
+        "max_utilization": 300,
         "category": "Forex",
         "tv_id": "EURUSD",
         "pair": "EUR-USD",
@@ -862,8 +999,8 @@
       },
       {
         "max_duration": "04:00",
-        "min_duration":"00:05",
-        "max_utilization":300,
+        "min_duration": "00:05",
+        "max_utilization": 300,
         "category": "Forex",
         "tv_id": "GBPUSD",
         "pair": "GBP-USD",
@@ -884,8 +1021,8 @@
       },
       {
         "max_duration": "04:00",
-        "min_duration":"00:05",
-        "max_utilization":150,
+        "min_duration": "00:05",
+        "max_utilization": 150,
         "category": "Forex",
         "tv_id": "AUDUSD",
         "pair": "AUD-USD",
@@ -906,8 +1043,8 @@
       },
       {
         "max_duration": "04:00",
-        "min_duration":"00:05",
-        "max_utilization":150,
+        "min_duration": "00:05",
+        "max_utilization": 150,
         "category": "Forex",
         "tv_id": "USDJPY",
         "pair": "USD-JPY",
@@ -928,8 +1065,8 @@
       },
       {
         "max_duration": "04:00",
-        "min_duration":"00:05",
-        "max_utilization":150,
+        "min_duration": "00:05",
+        "max_utilization": 150,
         "category": "Forex",
         "tv_id": "EURGBP",
         "pair": "EUR-GBP",
@@ -950,8 +1087,8 @@
       },
       {
         "max_duration": "04:00",
-        "min_duration":"00:05",
-        "max_utilization":150,
+        "min_duration": "00:05",
+        "max_utilization": 150,
         "category": "Forex",
         "tv_id": "EURJPY",
         "pair": "EUR-JPY",
@@ -972,8 +1109,8 @@
       },
       {
         "max_duration": "04:00",
-        "min_duration":"00:05",
-        "max_utilization":150,
+        "min_duration": "00:05",
+        "max_utilization": 150,
         "category": "Forex",
         "tv_id": "GBPJPY",
         "pair": "GBP-JPY",
@@ -994,8 +1131,8 @@
       },
       {
         "max_duration": "04:00",
-        "min_duration":"00:05",
-        "max_utilization":150,
+        "min_duration": "00:05",
+        "max_utilization": 150,
         "category": "Forex",
         "tv_id": "NZDUSD",
         "pair": "NZD-USD",
@@ -1016,8 +1153,8 @@
       },
       {
         "max_duration": "04:00",
-        "min_duration":"00:05",
-        "max_utilization":150,
+        "min_duration": "00:05",
+        "max_utilization": 150,
         "category": "Forex",
         "tv_id": "USDCHF",
         "pair": "USD-CHF",
@@ -1038,8 +1175,8 @@
       },
       {
         "max_duration": "04:00",
-        "min_duration":"00:05",
-        "max_utilization":150,
+        "min_duration": "00:05",
+        "max_utilization": 150,
         "category": "Forex",
         "tv_id": "GBPCHF",
         "pair": "GBP-CHF",
@@ -1060,8 +1197,8 @@
       },
       {
         "max_duration": "04:00",
-        "min_duration":"00:05",
-        "max_utilization":150,
+        "min_duration": "00:05",
+        "max_utilization": 150,
         "category": "Forex",
         "tv_id": "USDCAD",
         "pair": "USD-CAD",
