--- a/public/config.json
+++ b/public/config.json
@@ -1,14 +1,14 @@
 {
   "421613": {
     "referral_storage": "0x6f4ECcB5d1441854ac130D03Cd83895ad5EB8d04",
-    "meta": "0xddc2Fbc6761eabf131E51101Dd3b43A295e121F1",
+    "meta": "0x8c2015A994ac631f907c418Cc5703D529c6527fB",
     "router": "0x76c52E83d7dcCc70107a66BAd44D042D22D06be7",
     "multicall": "0xca11bde05977b3631167028862be2a173976ca11",
     "tokens": {
       "USDC": {
         "address": "0x658e6B62e7ab1d2B29a08F85f8442edEed562b48",
         "decimals": 6,
-        "img": "https://cdn.buffer.finance/Buffer-Website-Data/main/Assets/bnb.svg",
+        "img": "https://cdn.buffer.finance/Buffer-Website-Data/main/Assets/usdc.png",
         "name": "USDC",
         "pool_address": "0x1CDA6A34D84F444183E89D2D41D920EeaE883439",
         "faucet": "0x44B5aF6DFB239A24Aa0Eb0A82c168F961881b7d5"
@@ -16,11 +16,18 @@
       "BFR": {
         "address": "0x89fEF05446aEA764C53a2f09bB763876FB57ea8E",
         "decimals": 18,
-        "img": "https://cdn.buffer.finance/Buffer-Website-Data/main/Assets/bnb.svg",
+        "img": "https://buffer-images.s3.us-east-2.amazonaws.com/Buffer-Media/main/bfr.png",
         "name": "BFR",
         "pool_address": "0xEAf4738C83B48055b54B5E9E48a96A7ee6CbB412",
         "faucet": "0x8F4db9A46809782b67180F0f8f3d9843a5268137"
-      }
+      },
+      "ARB": {
+        "address": "0x76Bd15f52dd4A6B274f2C19b16F4934eC27615a8",
+        "decimals": 18,
+        "img": "/Chains/ARBITRIUM.png",
+        "name": "ARB",
+        "pool_address": "0xfa7C3782d45eC60624C67891C60e2FAE17fE4cE6"
+    }
     },
     "pairs": [
       {
@@ -41,6 +48,13 @@
             "options_contracts": {
               "config": "0xc6C370741eCa565D2f10F0Aeee34E6398A7DBA4d",
               "current": "0x0823584A67005C9855ff583FC7840D40cfB30276"
+            }
+          }, 
+          {
+            "token": "ARB",
+            "options_contracts": {
+                "config": "0xf0565425853a27B170AdD5C0e6fFBAc66403f4f5",
+                "current": "0x6406d4FB22Ebac283CbdaB0806684da0013615Fb"
             }
           }
         ]
@@ -64,6 +78,13 @@
               "config": "0x28b11Bde44236FBF2772ED6e0e2DD992B65ceCac",
               "current": "0xd7c4448e2Ac721e77360d86e413Ae66620034b8A"
             }
+          }, 
+          {
+            "token": "ARB",
+            "options_contracts": {
+                "config": "0x90A3A26Ee9B25eb23C1Afcb1b47A18fa98636E45",
+                "current": "0x7f8A37f6F03450f2641f56Eff7bb589F65Cc1eD2"
+            }
           }
         ]
       },
@@ -85,6 +106,13 @@
             "options_contracts": {
               "config": "0x25E845e9B6d361fE6aa1a796CcE010F55daA9A50",
               "current": "0xfe1F6691dF24B1b786e7C7a3c57D4ec0cfc43B77"
+            }
+          },
+          {
+            "token": "ARB",
+            "options_contracts": {
+                "config": "0x3d48bF4BbF81150d2630861AE43EB00FDEAdd5cD",
+                "current": "0x50025C0b1a2Ce3E1A145BDD1C54cFE297cE3DD38"
             }
           }
         ]
