--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/material": "^5.3.1",
     "@mui/styles": "^5.3.0",
     "@polyjuice-provider/web3": "^0.1.2",
+    "@pythnetwork/client": "^2.17.0",
     "@rainbow-me/rainbowkit": "^0.12.6",
     "@sentry/react": "^6.15.0",
     "@sentry/tracing": "^6.15.0",
