--- a/public/config.json
+++ b/public/config.json
@@ -383,7 +383,7 @@
             "token": "USDC_POL",
             "options_contracts": {
               "config": "0x08d5E019fB16f92822befaC9986E7b7402DAE610",
-              "current": "lol"
+              "current": "0x532321e6a2D8A54cf87E34850A7d55466B1ec197"
             }
           },
           {
