fix pool token name for trades

--- a/public/config.json
+++ b/public/config.json
@@ -194,7 +194,7 @@
         "name": "USDC",
         "pool_address": "0x1CDA6A34D84F444183E89D2D41D920EeaE883439",
         "faucet": "0x44B5aF6DFB239A24Aa0Eb0A82c168F961881b7d5",
-        "min_amount": 5
+        "min_amount": 5,"is_pol":false
       },
       "ARB": {
         "address": "0x76Bd15f52dd4A6B274f2C19b16F4934eC27615a8",
@@ -204,7 +204,7 @@
         "name": "ARB",
         "pool_address": "0xfa7C3782d45eC60624C67891C60e2FAE17fE4cE6",
         "faucet": "0x03Aa1E125D68D8F076D329347C220c21975aEf0f",
-        "min_amount": 5
+        "min_amount": 5,"is_pol":false
       }
     },
     "pairs": [
@@ -336,17 +336,17 @@
         "name": "USDC",
         "pool_address": "0x6Ec7B10bF7331794adAaf235cb47a2A292cD9c7e",
         "faucet": "0x44B5aF6DFB239A24Aa0Eb0A82c168F961881b7d5",
-        "min_amount": 25
+        "min_amount": 25,"is_pol":false
       },
       "USDC_POL": {
         "address": "0xFF970A61A04b1cA14834A43f5dE4533eBDDB5CC8",
         "meta": "0x5254C2894FaC60FF66ba008A4362D828d8a087E2",
         "decimals": 6,
         "img": "/tokens/USDC.png",
-        "name": "USDC_POL",
+        "name": "USDC",
         "pool_address": "0x6Ec7B10bF7331794adAaf235cb47a2A292cD9c7e",
         "faucet": "0x44B5aF6DFB239A24Aa0Eb0A82c168F961881b7d5",
-        "min_amount": 5
+        "min_amount": 5,"is_pol":true
       },
       "ARB": {
         "address": "0x912CE59144191C1204E64559FE8253a0e49E6548",
@@ -355,7 +355,7 @@
         "img": "/Chains/ARBITRIUM.png",
         "name": "ARB",
         "pool_address": "0xaE0628C88EC6C418B3F5C005f804E905f8123833",
-        "min_amount": 25
+        "min_amount": 25,"is_pol":false
       }
     },
     "pairs": [
@@ -887,7 +887,7 @@
         "name": "USDC",
         "pool_address": "0xcE5467a403eb433391F72007E151DBb8119728E0",
         "faucet": "0x4fccf1139FcA44EF716534bae9D3f87a01583338",
-        "min_amount": 5
+        "min_amount": 5,"is_pol":false
       }
     },
     "pairs": [
@@ -997,7 +997,7 @@
         "img": "https://cdn.buffer.finance/Buffer-Website-Data/main/Assets/usdc.png",
         "name": "USDC",
         "pool_address": "0x6FD5B386d8bed29b3b62C0856250cdD849b3564d",
-        "min_amount": 25
+        "min_amount": 25,"is_pol":false
       }
     },
     "pairs": [
