--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-redux": "^7.2.6",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.4.3",
+    "react-secure-storage": "^1.2.2",
     "react-transition-group": "^4.4.2",
     "react-use": "^17.4.0",
     "react-use-websocket": "^4.3.1",
