--- a/public/config.json
+++ b/public/config.json
@@ -219,17 +219,17 @@
   },
   "421613": {
     "referral_storage": "0x7Fd89bE6309Dcb7E147D172E73F04b52cee6313a",
-    "router": "0x2Acf434D53B6427d450Ae44563820f9714B5d776",
+    "router": "0x2d44Df5d4106C0C62893606E8956443DcA3a4Da2",
     "multicall": "0xca11bde05977b3631167028862be2a173976ca11",
     "creation_window": "0x72b9de12C4FBBAc17f3394F7EA3aDE315d83C7c1",
     "tokens": {
       "USDC": {
         "address": "0x4B5ed6b788e22D7bBe4790A4D6bE8f3A3FFC470E",
-        "meta": "0x4B435688BB22cCcF61Ed1b4B6464393a3607bA38",
+        "meta": "0xC33A64475f84C88DfB139fcFF29642a055587fe4",
         "decimals": 6,
         "img": "https://cdn.buffer.finance/Buffer-Website-Data/main/Assets/usdc.png",
         "name": "USDC",
-        "pool_address": "0x997CF4dDf0F38e77bE0Ff8f14A050949503288ee",
+        "pool_address": "0xA3769f6E42E1D7936919904E9156527dBc23C1b4",
         "faucet": "0x51469Ec9B8AE9B3Fbf985e735C2E3758FbD4e408",
         "min_amount": 5,
         "is_pol": false
@@ -252,8 +252,8 @@
           {
             "token": "USDC",
             "options_contracts": {
-              "config": "0x7036D2b82078e7749f684975167942EC8F1bCe57",
-              "current": "0x01D0A89c7b0AdF4E6b28Cc6b6A7D33b7aB98d814"
+              "config": "0x73521f24ba1a42eBF75A7A8da8DBa3865fB879a1",
+              "current": "0x0BD7CF8D34e6526Ac6798d6241663393B999f337"
             }
           }
         ]
@@ -274,8 +274,8 @@
           {
             "token": "USDC",
             "options_contracts": {
-              "config": "0x3907CAa03Fe8dFC2b4ff4e649CF53AA863F8C14d",
-              "current": "0x53EA55C80201f6Dbe531516996216aD11e252683"
+              "config": "0xf8A8fFF78c89114236f1b59E6bda91A96e04C290",
+              "current": "0xdeD3eb8277C41e009B6b01dAe4937F24E7C96d72"
             }
           }
         ]
@@ -326,8 +326,8 @@
       }
     ],
     "graph": {
-      "MAIN": "https://api.thegraph.com/subgraphs/name/buffertech/instant-trading-arbitrum-test",
-      "LITE": "https://api.thegraph.com/subgraphs/name/buffertech/instant-trading-arbitrum-test"
+      "MAIN": "https://subgraph.satsuma-prod.com/e66b06ce96d2/bufferfinance/instant-trading-arbitrum-testnet/api/",
+      "LITE": "https://subgraph.satsuma-prod.com/e66b06ce96d2/bufferfinance/instant-trading-arbitrum-testnet/api/"
     },
     "env": "arbitrum-testnet"
   },
