--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-gravatar": "^2.6.3",
     "react-html-parser": "^2.0.2",
     "react-idle-timer": "^5.5.3",
+    "react-joyride": "^2.5.4",
     "react-redux": "^7.2.6",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.4.3",
